[package]
name = "dark-sky"
version = "3.0.0"
authors = ["Alpha Chen <alpha.chen@gmail.com>"]

[dependencies]
alphred = { git = "https://github.com/kejadlen/alphred-rs.git" }
error-chain = "0.11"
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
# url = "1.5"
# url_serde = "0.2"
