[package]
name = "dark-sky"
version = "4.0.0"
authors = ["Alpha Chen <alpha@kejadlen.dev>"]

[dependencies]
alphred = "0.1"
chrono = "0.4"
error-chain = "0.11"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = { version = "2.2", features = ["serde"] }
